[tool.poetry]
name = "html-to-markdown"
version = "0.1.0"
description = "A Python project to scrape HTML source from websites and convert it to markdown files."
authors = ["Nathaniel Struselis <Nathaniel.Struselis@hotmail.co.uk>"]
readme = "README.md"
packages = [{include = "html_to_markdown"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
