[tool.poetry]
name = "html-to-markdown"
version = "0.1.0"
description = "A Python project to scrape HTML source from websites and convert it to markdown files."
authors = ["Nathaniel Struselis <Nathaniel.Struselis@hotmail.co.uk>"]
readme = "README.md"
license = "AGPL-3.0-only"
packages = [{include = "html_to_markdown"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
